deploy/flux/8gcr-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 8gcr-dev-main
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/instance: 8gcr-dev-main
    app.kubernetes.io/managed-by: flux
